<resources>
    <string name="app_name">Asthma App</string>
    <string name="loading">Loading…</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_user">Register User</string>
    <string name="already_registered_sign_in_here">Already registered? Sign in here</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_navigation">Asthma App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navi_username">Navi_Username</string>
    <string name="navi_useremail">Navi_UserEmail</string>
    <string name="navi_home">Home</string>
    <string name="navi_log_symptoms">Log Symptoms</string>
    <string name="navi_history">History</string>
    <string name="navi_reminders">Reminders</string>
    <string name="navi_about_asthma">About Asthma</string>
    <string name="navi_emergency_support">Emergency Support</string>
    <string name="navi_contact_us">Contact Us</string>
    <string name="asthma_first_aid">Asthma First Aid</string>
    <string name="view_action_plan">View Action Plan</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>
    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>
    <string name="no_reminders">Add Reminder</string>
    <string name="trigger_title"><b>Understanding asthma triggers</b></string>
    <string name="trigger_subheading">Knowing what your triggers are and how to deal with them means you’re more likely to stay well with your asthma.</string>
    <string name="trigger_body1">If you have asthma your airways are already more inflamed than the airways of someone without asthma. This means they’re more sensitive and more likely to react to triggers.\n\n
        That’s why it’s so important to take your preventer inhaler every day. It keeps down the inflammation in your airways, so you’ll be less likely to react to your asthma triggers. </string>
    <string name="trigger_body2">
       <b>What’s an asthma trigger?</b>\n\n
        An asthma trigger is anything that can set off your asthma symptoms. Common triggers include colds and viruses, pets, cigarette smoke, cold weather and pollen.\n\n
        You may have just one or two triggers, or several. What sets off your asthma symptoms may be different to what sets off someone else’s. Everyone with asthma has their own set of asthma triggers.\n\n
        It’s helpful to know what your triggers are so you can avoid them if possible.
    </string>
    <string name="trigger_body3">
      <b>Why is a reaction to a trigger sometimes worse than at other times?</b>\n\n
        Sometimes you may be more likely to react badly to your usual asthma triggers than at other times. This may be because asthma symptoms are caused by more than one asthma trigger at the same time. For example, if you have a cold and you also come into contact with a cat it can cause a stronger reaction.\n\n
        “The sensitivity in your airways can vary day to day, month to month and year to year,” says Asthma UK nurse, Kathy. “But to keep things steady, and stay on top of the inflammation, take your preventer inhaler every day as prescribed. That way your triggers are less likely to cause symptoms.”
    </string>
    <string name="trigger_body4">
     <b>How to deal with asthma triggers</b>\n\n
     Some asthma triggers are avoidable, such as cigarette smoke, pets and alcohol. But it’s impossible to completely avoid others – things like pollen, pollution, and cold weather.\n\n
     The good news is there are proven steps you can take to cut your risk of asthma triggers causing asthma symptoms or an asthma attack:\n\n
     <b>1. TAKE YOUR PREVENTER MEDICINE EVERY DAY</b>\n\n
     The best way to help your body cope well with any asthma triggers is to take your preventer inhaler every day as prescribed.\n\n
     Your preventer medicine works away in the background to help inflammation and sensitivity in your airways.\n\n
     Taking it every day, and in the right way, means there’s less chance of a reaction if you come into contact with any triggers.\n\n
        <b>2. USE A WRITTEN ASTHMA ACTION PLAN</b>\n\n
     Use your written asthma action plan to note down your triggers so you can spot when your asthma needs extra help.\n\n
     Using an action plan cuts your risk of ending up in hospital due to your asthma. It contains all the information you need to look after your asthma well and reduce your likelihood of getting symptoms.\n\n
     If you haven’t got one, download an asthma action plan now and fill it in with your GP or asthma nurse.\n\n
         <b>3. GO FOR AN ASTHMA REVIEW AT LEAST ONCE A YEAR</b>\n\n
     An asthma review gives you and your GP or asthma nurse a chance to make sure your written asthma action plan is up to date.\n\n
     You can check you’re taking the right medicines at the right doses so you’re getting the best protection against your triggers and cutting your risk of an asthma attack.\n\n
     You can also check you’re using your inhaler in the best way - it might be that something as simple as a change of inhaler technique could help you manage your asthma better.
    </string>
    <string name="cu_title">
        <b>Get In Touch with Us</b>
    </string>
    <string name="cu_body1">
        If you have an enquiry relating to Asthma UK including membership, donations, our resources, or indeed have a complaint, then please contact our Supporter Care Team.
    </string>
    <string name="cu_address">
    Supporter Care Team,\n
    Asthma UK,\n
    18 Mansell Street,\n
    London,\n
    E1 8AA.
    </string>
    <string name="cu_asthma_no">0300 222 5800</string>
    <string name="cu_email">By email:</string>
    <string name="cu_post_body">By post: You can write to us at:</string>
    <string name="cu_telephone">By telephone:</string>
    <string name="cu_please_visit">Please visit our</string>
    <string name="cu_asthmauk_email">info@asthma.org.uk</string>
    <string name="cu_helppage_link">Helpline Page</string>
    <string name="cu_more_information">for more information.</string>
    <string name="about_asthma_body">Just about everyone can improve their asthma. Learn new strategies, tips and techniques to improve yours.</string>
    <string name="medication">Medication</string>
    <string name="more_info">More info</string>
    <string name="triggers">Triggers</string>
    <string name="symptoms">Symptoms</string>
    <string name="date_icon">Date Icon</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="time_icon">Time Icon</string>
    <string name="repeat_icon">Repeat Icon</string>
    <string name="repeat_interval">Repeat Interval</string>
    <string name="repeat_period">Repeat Period</string>
    <string name="em_title">Asthma Attack</string>
    <string name="em_subheading">
        Follow this emergency advice if you\'re having an asthma attack.
    </string>
    <string name="em_steps">
        <b>Step 1</b> - Sit the person upright - try to keep them calm and reassuring.\n\n
        <b>Step 2</b> - Take one puff of your reliever inhaler (usually blue) every 30-60 up to 10 puffs.\n\n
        <b>Step 3</b> - If you feel worse at any point OR you don\'t fell better after 10 puffs <red>call 999 for an ambulance</red>.\n\n
        <b>Step 4</b> - Repeat step 2 after 15 minutes while you\'re waiting for an ambulance.
    </string>
    <string name="call_emergency">
        <b>Call emergency assistance immediately (Dial 999) if …\n\n</b>
        - If the person is not breathing\n\n
        - If the person\'s Asthma suddenly becomes worse, or is not improving\n\n
        - If the person is having an asthma attack and a reliever is not available\n\n
        - if you are not sure if it\'s asthma\n\n
        - if the person is known to Anaphylaxis - Follow Anaphylaxis Action Plan,
        then give Asthma First Aid (Blue/Grey reliever medication is unlikely to harm, even if the person does not have asthma)
    </string>
    <string name="symptoms_info">
        If you have asthma, your airways (breathing tubes) are usually inflamed all the time, not just when you have symptoms.
        Mucus can block the inside of your airways as well. Sometimes your airways tighten up as well… so there is less space to breathe through,
        and that\'s what leads to asthma symptoms!
    </string>
    <string name="common_symptoms">
        <b>Common symptoms:</b>\n
        - Wheezing\n
        - Cough\n
        - Chest tightness\n
        - Phlegm/Mucus\n
        - Shortness of breath\n
        - Chest pains
    </string>
    <string name="textview">TextView</string>
    <string name="GZ_body2_title">My daily asthma routine:</string>
    <string name="GZ_body_preventer">I need to take my preventer inhaler every day even when I feel well.</string>
    <string name="i_take">I take</string>
    <string name="my_preventer_inhaler">My preventer inhaler (insert name/colour):</string>
    <string name="at_night">puff(s) at night.</string>
    <string name="my_reliever_inhaler">My reliever inhaler (insert name/colour):</string>
    <string name="in_morning">puff(s) in the morning and</string>
    <string name="GZ_body3">I take my reliever inhaler only if I need to I take</string>
    <string name="GZ_body4">puff(s) of my reliever inhaler if any of these things happen:\n ★ I\'m wheezing\n ★ My chest feels tight\n ★ I\'m finding it hard to breathe\n ★ I\'m coughing</string>
    <string name="resources_for_children_with_asthma">Resources for children with asthma</string>
    <string name="how_to_get_our_resources">How to get our resources</string>
    <string name="easy_read_resources">Easy Read resources</string>
    <string name="written_asthma_action_plans">Written asthma action plans</string>
    <string name="MI_body3">All our booklets, leaflets and written asthma action plans have been put together to make life easier for people with asthma. We want to help you:\n\n
                            - understand and manage your asthma better\n
                            - get the best from your medicines\n
                            - make the most of your healthcare appointments\n\n
                            The resources have been developed alongside healthcare professionals who have a specialist interest in asthma and people with asthma who know what it’s like to live with the condition. They have also been certified by The Information Standard, which means they’ve been through a rigorous assessment to check they\'re clear, accurate, balanced, evidence-based and up-to-date.</string>
    <string name="resources_for_adults_with_asthma">Resources for adults with asthma</string>
    <string name="online_discussion_forum">Online discussion forum</string>
    <string name="resources">Resources</string>
    <string name="our_award_winning_resources_have_been_created_using_the_most_trusted_evidence_and_evaluated_by_healthcare_professionals_and_people_with_asthma">Our award-winning resources have been created using the most trusted evidence and evaluated by healthcare professionals and people with asthma.</string>
    <string name="schools_resources">Schools resources</string>
</resources>